Fix the spacing of the empty states

--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -15,6 +15,10 @@
     max-width: 1260px;
   }
 
+  *.xl {
+    max-width: 106rem;
+  }
+
   &.centered {
     margin: 0 auto;
   }
