--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,6 +2,7 @@
   align-items: center;
   background: var(--gray-100);
   display: flex;
+  flex-shrink: 0;
   height: 5rem;
   justify-content: space-between;
   padding: 0 2rem;
