--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -2,4 +2,5 @@
   margin: 0 auto;
   max-width: 106rem;
   padding: 0 3rem 8rem 3rem;
+  width: 100%;
 }
