--- a/src/styles/pages/sites/[site_id]/_recordings.scss
+++ b/src/styles/pages/sites/[site_id]/_recordings.scss
@@ -1,30 +1,45 @@
 .page.recordings {
   background: var(--white);
+  display: flex;
   flex: 1;
+  flex-direction: column;
 
   .title {
     margin: 3rem 0;
 
     &.empty {
-      margin: 3rem 3rem 1rem 3rem;
+      margin: 3rem 0 1rem 0;
+      width: 100%;
     }
   }
 
   .empty-state {
     align-items: center;
-    background: var(--gray-50);
-    border-radius: var(--border-radius-lg);
     display: flex;
+    flex: 1;
     flex-direction: column;
-    justify-content: center;
-    padding: 8rem;
+    padding: 0 3rem;
+    width: 100%;
 
-    h3 {
-      font-size: 3.2rem;
-    }
+    .empty-state-contents {
+      align-items: center;
+      background: var(--gray-50);
+      border-radius: var(--border-radius-lg);
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+      justify-content: center;
+      margin-bottom: 3rem;
+      padding: 4rem 3rem;
+      width: 100%;
 
-    .message {
-      max-width: 580px;
+      h3 {
+        font-size: 3.2rem;
+      }
+
+      .message {
+        max-width: 580px;
+      }
     }
   }
 }
