--- a/src/styles/pages/sites/[site_id]/_team.scss
+++ b/src/styles/pages/sites/[site_id]/_team.scss
@@ -1,7 +1,6 @@
 .page.team {
   background: var(--white);
   flex: 1;
-  padding-bottom: 3rem;
 
   .title {
     align-items: center;
