--- a/src/styles/pages/users/_account.scss
+++ b/src/styles/pages/users/_account.scss
@@ -1,7 +1,6 @@
 .page.user.account {
   background: var(--white);
   flex: 1;
-  padding-bottom: 3rem;
 
   .title {
     margin: 3rem 0;
