--- a/src/styles/pages/users/_password.scss
+++ b/src/styles/pages/users/_password.scss
@@ -2,7 +2,6 @@
   background: var(--white);
   flex: 1;
   margin: 0;
-  padding-bottom: 3rem;
 
   .title {
     margin: 3rem 0;
